changed port to env and changred href link

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
-	<link rel="icon" type="image/x-icon" href="http://127.0.0.1:8100/images/favicon.ico?v=2">
+	<link rel="icon" type="image/x-icon" href="/images/favicon.ico?v=2">
 	<script type="text/javascript" src="clientSoc.js" ></script>
 	<script type="text/javascript" src="clientscript.js"></script>
 	<!-- <script>
@@ -30,7 +30,7 @@
 <BODY>
 	<form method="POST" action="submit">
 		<div>
-			<textarea style="background: url(http://127.0.0.1:8100/images/codeEdit.png);
+			<textarea style="background: url(/images/codeEdit.png);
     background-attachment: local;   background-repeat: no-repeat;    padding-left: 35px;   padding-top: 10px;    border-color:#ccc;" id="code"  name="code" rows="25" cols="90" placeholder="Enter your code here" oninput="detectChange();" onselect="selectionRange()" onpaste="selectionRange();"></textarea>
 		</div>
 		<div>
